// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders error state 1`] = `
Array [
  <div
    className="text-input"
    onChange={[Function]}
    required={false}
  />,
  <div
    className="warning"
    iconColor="negative"
  >
    Could not fetch forms from Typeform. Received the following error: ain't working
  </div>,
]
`;

exports[`App renders error state with previous value 1`] = `
Array [
  <div
    className="text-input"
    onChange={[Function]}
    required={false}
    value="ABCDEF"
  />,
  <div
    className="warning"
    iconColor="negative"
  >
    Could not fetch forms from Typeform. Received the following error: ain't working
  </div>,
]
`;

exports[`App renders error state with the field being required 1`] = `
Array [
  <div
    className="text-input"
    onChange={[Function]}
    required={true}
  />,
  <div
    className="warning"
    iconColor="negative"
  >
    Could not fetch forms from Typeform. Received the following error: ain't working
  </div>,
]
`;

exports[`App renders loading state 1`] = `null`;

exports[`App renders with forms 1`] = `
<div
  className="select"
  onChange={[Function]}
  required={false}
>
  <div
    className="option"
    value=""
  >
    Choose a typeform
  </div>
  <div
    className="option"
    value="123"
  >
    First form
  </div>
  <div
    className="option"
    value="345"
  >
    Second form
  </div>
  <div
    className="option"
    value="678"
  >
    Third form
  </div>
</div>
`;

exports[`App renders with forms and being required 1`] = `
<div
  className="select"
  onChange={[Function]}
  required={true}
>
  <div
    className="option"
    value=""
  >
    Choose a typeform
  </div>
  <div
    className="option"
    value="123"
  >
    First form
  </div>
  <div
    className="option"
    value="345"
  >
    Second form
  </div>
  <div
    className="option"
    value="678"
  >
    Third form
  </div>
</div>
`;

exports[`App renders with forms and no longer existing previous value 1`] = `
Array [
  <div
    className="warning"
  >
    The form you have selected in Contentful no longer exists in Typeform.
  </div>,
  <div
    className="select"
    onChange={[Function]}
    required={true}
    value="234"
  >
    <div
      className="option"
      value=""
    >
      Choose a typeform
    </div>
    <div
      className="option"
      value="234"
    >
      Previous value (no longer exists in Typeform)
    </div>
    <div
      className="option"
      value="123"
    >
      First form
    </div>
    <div
      className="option"
      value="345"
    >
      Second form
    </div>
    <div
      className="option"
      value="678"
    >
      Third form
    </div>
  </div>,
]
`;

exports[`App renders with forms and previous value 1`] = `
<div
  className="select"
  onChange={[Function]}
  required={true}
  value="123"
>
  <div
    className="option"
    value=""
  >
    Choose a typeform
  </div>
  <div
    className="option"
    value="123"
  >
    First form
  </div>
  <div
    className="option"
    value="345"
  >
    Second form
  </div>
  <div
    className="option"
    value="678"
  >
    Third form
  </div>
</div>
`;
